# bacnet-sim-ci

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  example-multi-device.yaml
docs/brainstorms/: 2026-02-15-bacnet-sim-ci-brainstorm.md
docs/plans/: 2026-02-15-feat-bacnet-device-simulator-ci-plan.md
docs/solutions/build-errors/: mypy-response-model-mismatch-api-20260225.md
examples/: workflow-action.yml  workflow-bacnet-protocol.yml  workflow-multi-device.yml  workflow-service-container.yml
scripts/: entrypoint.sh
src/bacnet_sim/: __init__.py  api.py  config.py  defaults.py  devices.py  health.py  lag.py  main.py  networking.py  setup_ips.py  simulation.py  templates.py
tests/: conftest.py  test_api.py  test_config.py  test_devices.py  test_integration.py  test_lag.py  test_main.py  test_networking.py  test_simulation.py  test_templates.py
todos/: 001-complete-p1-lag-simulation-dead-code.md  002-complete-p1-bac0-factory-state-leak.md  003-complete-p2-temperature-units-mismatch.md  004-complete-p2-unsupported-object-types-silent-fail.md  005-complete-p3-validate-object-type-path-param.md  006-complete-p2-unit-tests-device-lifecycle.md  006-ready-p2-unit-tests-device-lifecycle.md  007-complete-p3-cache-ci-dependencies.md  008-complete-p3-value-simulation-scripting.md  010-complete-p3-multi-platform-docker.md  011-complete-p3-bulk-read-write-api.md  014-complete-p3-state-snapshot-restore.md  015-complete-p3-precommit-mypy.md  016-complete-p3-housekeeping-chores.md  017-complete-p3-cleanup-virtual-ips-on-failure.md  018-complete-p3-device-templates.md  019-complete-p3-detect-ip-overlap.md  020-complete-p2-fix-virtual-ip-infinite-loop.md  021-complete-p2-enforce-commandable-flag-on-write.md  022-complete-p3-cap-snapshot-storage.md  023-complete-p3-dict-device-lookup.md  024-complete-p3-pydantic-response-models.md  025-complete-p2-simulation-endpoint-tests.md  026-complete-p3-replace-bare-except-pass.md  027-complete-p3-fix-action-yml-quoting.md
